force-app/main/default/objects/Therapeutic_Area_Assignment__c/Therapeutic_Area_Assignment__c.object-meta.xml
<CustomObject>
    <description>Object for relation between Resource and Therapeutic Area</description>
    <label>Therapeutic Area Assignment</label>
    <nameField>
        <displayFormat>TAA - {0000000}</displayFormat>
        <label>Therapeutic Area Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Therapeutic Area Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>