force-app/main/default/objects/Therapeutic_Area_Assignment__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Therapeutic Area Assignments</relationshipLabel>
    <relationshipName>Therapeutic_Area_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>