force-app/main/default/objects/Therapeutic_Area_Assignment__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <label>Therapeutic Area</label>
    <referenceTo>Therapeutic_Area__c</referenceTo>
    <relationshipLabel>Therapeutic Area Assignments</relationshipLabel>
    <relationshipName>Therapeutic_Area_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>