force-app/main/default/objects/Therapeutic_Area_Assignment__c/fields/Third_Party_COI__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_COI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party COI</label>
    <referenceTo>Therapeutic_Area__c</referenceTo>
    <relationshipLabel>Therapeutic Area Assignments (Third Party COI)</relationshipLabel>
    <relationshipName>Therapeutic_Area_Assignments2</relationshipName>
    <type>Lookup</type>
</CustomField>